--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+<link rel="apple-touch-icon" href="favicon.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon.png">
+<meta name="viewport" content="width=device-width" />
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+<title>JavaScript Advanced Index</title>
 </head>
-<p>Test</p>
-<p>Test</p>
+
 <body>
 
+	<h1>JavaScript Advanced Index</h1>
+	<p>Simone Sciacovelli</p>
+
+<div class="flex-container">
+    <div class="row"> 
+        <a href=""><div class="flex-item">
+        	<div class="info">Assignment 1: Index</div>
+        </div></a>
+        <a href=""><div class="flex-item">
+        	<div class="info">Assignment 2: Pattern</div>
+        </div></a>
+        <a href=""><div class="flex-item">
+        	<div class="info">Assignment 3: Instrument</div>
+        </div></a>
+        <a href=""><div class="flex-item">
+        	<div class="info">Assignment 4: Final</div>
+        </div></a>
+    </div>
+</div>
+
 </body>
+
 </html>
