--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<h1>JavaScript Advanced Index</h1>
-	<p>Simone Sciacovelli</p>
+	<p>Simon Sciacovelli</p>
 
 <div class="flex-container">
     <div class="row"> 
