--- a/project1.html
+++ b/project1.html
@@ -16,22 +16,16 @@
 
 <body>
 
-	<h1>JavaScript Advanced Index</h1>
+	<h1>Assignment 2: Pattern</h1>
 	<p>Simon Sciacovelli</p>
 
 <div class="flex-container">
     <div class="row"> 
-        <a href="project1.html"><div class="flex-item">
-        	<div class="info">Assignment 1: Index</div>
+        <a href="loop.html"><div id="it1" class="flex-item">
+        	<div class="info">Iteration 1</div>
         </div></a>
-        <a href=""><div class="flex-item">
-        	<div class="info">Assignment 2: Pattern</div>
-        </div></a>
-        <a href=""><div class="flex-item">
-        	<div class="info">Assignment 3: Instrument</div>
-        </div></a>
-        <a href=""><div class="flex-item">
-        	<div class="info">Assignment 4: Final</div>
+        <a href="loop2.html"><div id="it2" class="flex-item">
+        	<div class="info">Iteration 2</div>
         </div></a>
     </div>
 </div>
