--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="apple-touch-icon" sizes="76x76" href="favicon.png">
 <link rel="apple-touch-icon" sizes="120x120" href="favicon.png">
 <link rel="apple-touch-icon" sizes="152x152" href="favicon.png">
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <link rel="stylesheet" href="style.css">
