--- a/project1.html
+++ b/project1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 <link rel="apple-touch-icon" href="favicon.png">
 <link rel="apple-touch-icon" sizes="76x76" href="favicon.png">
 <link rel="apple-touch-icon" sizes="120x120" href="favicon.png">
 <link rel="apple-touch-icon" sizes="152x152" href="favicon.png">
-<meta name="viewport" content="width=device-width" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <link rel="stylesheet" href="style.css">
