--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width">
 <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 <link rel="apple-touch-icon" href="favicon.png">
 <link rel="apple-touch-icon" sizes="76x76" href="favicon.png">
