--- a/project1.html
+++ b/project1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 <link rel="apple-touch-icon" href="favicon.png">
