--- a/loop2.html
+++ b/loop2.html
@@ -26,19 +26,21 @@
 			border-radius: 10px;
 			opacity: 0.5;
 			cursor: pointer;
+
 		}
 
 		.p2{
 			background-color: #BDBDBD;
-			margin-bottom: 30px;
-			margin-right: 30px;
-			margin-left: 30px;
-			margin-top: 30px;
+			margin-bottom: 50%;
+			margin-right: 50%;
+			margin-left: 50%;
+			margin-top: 50%x;
 			display: flex;
 			transition: 3s;
 			border-radius: 10px;
 			opacity: 0.5;
 			cursor: pointer;
+			position: absolute;
 		}
 
 		.pattern:hover{
@@ -65,6 +67,7 @@
 			transition:flex 3s ease all;
 			align-items: center;
   			justify-content: center;
+
 		}
 
 
