--- a/loop2.html
+++ b/loop2.html
@@ -40,7 +40,7 @@
 			border-radius: 10px;
 			opacity: 0.5;
 			cursor: pointer;
-			position: absolute;
+			/*position: absolute;*/
 		}
 
 		.pattern:hover{
