--- a/loop2.html
+++ b/loop2.html
@@ -30,6 +30,8 @@
 		}
 
 		.p2{
+			width: 70px;
+			height: 70px;
 			background-color: #BDBDBD;
 			margin-bottom: 50%;
 			margin-right: 50%;
@@ -161,6 +163,11 @@
 //}
 
 //window.addEventListener('deviceorientation', handleOrientation);
+
+
+if ($(".pattern").toggleClass("p2")) {
+
+}
 
 
 	</script>
