--- a/loop2.html
+++ b/loop2.html
@@ -31,11 +31,11 @@
 
 		.p2{
 			background-color: #BDBDBD;
-			margin-bottom: 30px;
-			margin-right: 30px;
-			margin-left: 30px;
-			margin-top: 30px;
-			display: flex;
+			/*margin-bottom: 30px;*/
+			/*margin-right: 30px;*/
+			/*margin-left: 30px;*/
+			/*margin-top: 30px;*/
+			/*display: flex;*/
 			transition: 3s;
 			border-radius: 10px;
 			opacity: 0.5;
