--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <div class="flex-container">
     <div class="row"> 
-        <a href="project1.html"><div class="flex-item">
+        <div class="flex-item">
         	<div class="info">Assignment 1: Index</div>
-        </div></a>
-        <a href=""><div class="flex-item">
+        </div>
+        <a href="project1.html"><div id="p1" class="flex-item">
         	<div class="info">Assignment 2: Pattern</div>
         </div></a>
         <a href=""><div class="flex-item">
