--- a/project1.html
+++ b/project1.html
@@ -24,7 +24,7 @@
         <a href="loop.html"><div id="it1" class="flex-item">
         	<div class="info">Iteration 1</div>
         </div></a>
-        <a href="loop2.html"><div id="it2" class="flex-item">
+        <a href="loop2a.html"><div id="it2" class="flex-item">
         	<div class="info">Iteration 2</div>
         </div></a>
     </div>
