--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<title>JavaScript Advanced Index</title>
+<title>Assignemnt 3</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <a href="project1.html"><div id="p1" class="flex-item">
         	<div class="info">Assignment 2: Pattern</div>
         </div></a>
-        <a href=""><div class="flex-item">
+        <a href="assignment3/index.html"><div class="flex-item">
         	<div class="info">Assignment 3: Instrument</div>
         </div></a>
         <a href=""><div class="flex-item">
