--- a/loop2a.html
+++ b/loop2a.html
@@ -54,7 +54,13 @@
 			border-radius: 50px;
 			background-color: red;
 			box-shadow:0px 0px 70px grey;
+			-ms-animation:wiggle .3s 2;-moz-animation:wiggle .3s 2;-webkit-animation:wiggle .3s 2;animation:wiggle .3s 2;
 		}
+
+		@-ms-keyframes wiggle{0%{-ms-transform:rotate(3deg);}50%{-ms-transform:rotate(-3deg);}100%{-ms-transform:rotate(3deg);}}
+		@-moz-keyframes wiggle{0%{-moz-transform:rotate(3deg);}50%{-moz-transform:rotate(-3deg);}100%{-moz-transform:rotate(3deg);}}
+		@-webkit-keyframes wiggle{0%{-webkit-transform:rotate(3deg);}50%{-webkit-transform:rotate(-3deg);}100%{-webkit-transform:rotate(3deg);}}
+		@keyframes wiggle{0%{transform:rotate(3deg);}50%{transform:rotate(-3deg);}100%{transform:rotate(3deg);}}
 
 
 		#w{
@@ -75,14 +81,39 @@
   		height: 56px;
   		width: 56px;
   		margin: 1em;
+  		opacity: 0;
   		border-radius: 50%;
   		box-shadow: 0px 5px 30px #898992;
   		position: fixed;
   		bottom: 20px;
-  		right: 20px;
   		transition: 1s;
+  		right: 20px;
   		cursor: pointer;
+  		-webkit-animation: fadeInFromNone 1s forwards;
+    	-moz-animation: fadeInFromNone 1s forwards;
+    	-o-animation: fadeInFromNone 1s forwards;
+    	animation: fadeInFromNone 1s forwards;
+
+    	-moz-animation-delay: 101s;
+    	-webkit-animation-delay: 101s;
+    	-o-animation-delay: 101s;
+   		 animation-delay: 101s;
 		}
+
+		@-webkit-keyframes fadeInFromNone {
+    0% {
+        opacity: 0;
+    }
+
+    1% {
+
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 		.refresh2 {
   		background: #FFFF url(arrow2.svg) center/40px no-repeat;
@@ -92,7 +123,7 @@
   		border-radius: 50%;
   		box-shadow: 0px 5px 30px #898992;
   		position: fixed;
-  		bottom: 110px;
+  		top: 20px;
   		right: 20px;
   		transition: 1s;
   		cursor: pointer;
@@ -121,7 +152,7 @@
 
 for (let i = 0; i < 43; i++) {
     var snowTimer = 0;
-	var colors = ['red', 'blue', 'green', 'teal', 'rosybrown', 'tan', 'plum', 'saddlebrown'];
+	var colors = ['Crimson', 'coral', 'green', 'Turquoise', 'GreenYellow', 'Orchid', 'SlateBlue', 'LightSlateGray'];
 	var boxes = document.getElementsByClassName("pattern");
     var element = document.createElement("div")
 
