--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="project1.html"><div id="p1" class="flex-item">
         	<div class="info">Assignment 2: Pattern</div>
         </div></a>
-        <a href="assignment3/index.html"><div class="flex-item">
+        <a href="assignment3/index.html"><div id="p2" class="flex-item">
         	<div class="info">Assignment 3: Instrument</div>
         </div></a>
         <a href=""><div class="flex-item">
