--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -24,7 +24,7 @@
 <div class="frame">
 
 	<div class="mydiv" id="mydiv">
-	<img id="image" src="puppet.gif">
+	<img id="image" src="puppet-1.gif">
 	</div>
 	
 	<div class="mydiv2" id="mydiv2">
