--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="assignment3/index.html"><div id="p2" class="flex-item">
         	<div class="info">Assignment 3: Instrument</div>
         </div></a>
-        <a href=""><div class="flex-item">
+        <a href="assignment4/index.html"><div id="p3" class="flex-item">
         	<div class="info">Assignment 4: Final</div>
         </div></a>
     </div>
