--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
 <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 <link rel="apple-touch-icon" href="favicon.png">
 <link rel="apple-touch-icon" sizes="76x76" href="favicon.png">
@@ -21,17 +21,17 @@
 
 <div class="flex-container">
     <div class="row"> 
-        <div class="flex-item">
+<!--         <div class="flex-item">
         	<div class="info">Assignment 1: Index</div>
-        </div>
+        </div> -->
         <a href="project1.html"><div id="p1" class="flex-item">
-        	<div class="info">Assignment 2: Pattern</div>
+        	<div class="info">Assignment 1: Pattern</div>
         </div></a>
         <a href="assignment3/index.html"><div id="p2" class="flex-item">
-        	<div class="info">Assignment 3: Instrument</div>
+        	<div class="info">Assignment 2: Instrument</div>
         </div></a>
         <a href="assignment4/index.html"><div id="p3" class="flex-item">
-        	<div class="info">Assignment 4: Final</div>
+        	<div class="info">Assignment 3: Final</div>
         </div></a>
     </div>
 </div>
