--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
@@ -54,7 +55,6 @@
 	<div class="info" >
 <p>
   <span></span>
-  <span>&nbsp;</span>
 </p>
 
 <div class="pos1"></div>
