--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -14,7 +14,7 @@
 	<div class="mobilemenu">
 	<div class="info"><a href="p2.html"><h3 class="infot">Info</h3></a></div>
 	<div class="coll"><a href="collection.html"><h3 class="colt">Collection</h3></a></div>
-	<div class="res"><a href="https://www.nytimes.com/section/science"><h3 class="rest">Resources</h3></a></div>
+	<div class="res"><a href="https://www.nytimes.com/section/science" target="_blank"><h3 class="rest">Resources</h3></a></div>
 	</div>
 
 	<div class="navbar">
@@ -23,7 +23,7 @@
 		<div class="nav2">
 		<div class="info"><a href="p2.html"><h3 class="infot">Info</h3></a></div>
 		<div class="coll"><a href="collection.html"><h3 class="colt">Collection</h3></a></div>
-		<div class="res"><a href="https://www.nytimes.com/section/science"><h3 class="rest">Resources</h3></a></div>
+		<div class="res"><a href="https://www.nytimes.com/section/science" target="_blank"><h3 class="rest">Resources</h3></a></div>
 		</div>
 	</div>
 
