--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -34,9 +34,9 @@ function setCookie(name, val, days, path) {
 
 var username = getCookie("username");
 if (!username) {
-    setCookie("username", prompt("please enter your name:"), 365);
+    setCookie("username", prompt("Please Enter Your Name:"), 365);
 } else {
-    alert("welcome again " + username);
+    alert("Welcome Again " + username);
 }
 </script>
 </head>
